# tap-confluence

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: singer-check-tap.yml  singer-check-tap.yml.ignore  superlinter.yml
schemas/: theme.json
tap_confluence/: streams.py  tap.py
tap_confluence/schemas/: content.json  group.json  space.json
