[tool.poetry]
name = "tap-confluence"
version = "0.0.1"
description = "Singer tap for the Confluence Content REST API"
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = "^3.7"
singer-sdk = {git = "https://gitlab.com/meltano/singer-sdk", rev = "development"}
importlib-metadata = {version = "^3.7.2", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
singer-tools = "^0.4.1"
isort = "^5.7.0"

[tool.poetry.scripts]
tap-confluence = 'tap_confluence.tap:cli'

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_confluence"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
